0027986: Visualization - AIS_InteractiveContext::SetLocation() does not update dynamic highlighting

AIS_InteractiveContext::SetLocation() - update HilightMode instead of DisplayMode.
PrsMgr_PresentationManager::UpdateHighlightTrsf() - fix accessing NULL presentation.